syntax = "proto3";

package api.player;

message Player {
  string id = 1;
  string username = 2;
  optional string email = 3;
  optional string team = 4;
  int32 score = 5;
  PlayerType type = 6;
  PlayerStatus status = 7;
  optional string role = 8; // Role of the player in the game

  enum PlayerType {
    HUMAN = 0; // default
    AI = 1;
  }

  enum PlayerStatus {
    ACTIVE = 0; // default
    INACTIVE = 1;
  }
}

option go_package = "github.com/oof-gg/oof-protobufs/generated/go/api/player";