syntax = "proto3";

package player;

message Action {
  string player_id = 1;
  string session_id = 2;
  string game_id = 3;
  ActionType action_type = 4;
  optional Position position = 5;
  optional Velocity velocity = 6;
  map<string, PlayerAction> action = 7; // Flexible data structure for custom actions
  int64 timestamp = 8;

  enum ActionType {
    CUSTOM = 0;
    MOVE = 1;
    JUMP = 2;
    SHOOT = 3;
    PICKUP = 4;
    DROP = 5;
    USE = 6;
    INTERACT = 7;
  }

  message Position {
    float x = 1;
    float y = 2;
    float z = 3;
  }

  message Velocity {
    float x = 1;
    float y = 2;
    float z = 3;
  }

  message PlayerAction {
    string key = 1;
    oneof value {
      string string_value = 2;
      int32 int_value = 3;
      float float_value = 4;
      bool bool_value = 5;
    }
  }
}